@@ -25,6 +25,7 @@ convenience, here's a url to one of the relevant sections:
 * Language:
   . new command @allowcodebreaks to control breaks at _ and - within @code.
   . new command @frenchspacing to control spacing after sentences.
+  . new command @fonttextsize to allow changing body text font size to 10pt.
 * makeinfo:
   . improved Docbook output.
   . @enddots{} outputs three dots instead of four, for consistency with
